# aws-cdk-ecs-api

./: .gitignore  README.md  commands_cdk.sh  commands_python.sh  important_commands.sh  pyproject.toml
assets/: aws-cdk-ecs-api-architecture.drawio
cdk/: cdk.json  package-lock.json  package.json
cdk/lib/: cdk-stack.ts
src/: Dockerfile  docker-compose.yml
src/app/: costs_manager.py  main.py
tests/integration/: locustfile.py
tests/unit/: test_costs_manager.py  test_main.py
